--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
 <h1>Hello world!</h1>
 <p>This is the first file in my new Git Repo.</p>
-<p>A new line is added.</p>
+<p>This line is here to show how merging works.</p>
+<div><img src="img_hello_git.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
+
 
 </body>
 </html>
