--- a/index.html
+++ b/index.html
@@ -13,6 +13,8 @@ style="width:30%;max-width:960px"></div>
 <p>This line is here to show how merging works.</p>
 <div><img src="Success.jpg" alt="Hello Git" style="width:100%;max-width:640px"></div>
 <p>A new line in our file!</p>
+  
+<p>It is edited on the new branch -  html-skeleton.</p>
 
 
 </body>
